SERVER-16023: abort mongod on WT_PANIC